<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.timothywaikinlam.portandstarboard.MainActivity"
    tools:layout_editor_absoluteY="81dp">

    <Button
        android:id="@+id/ShowLeftName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="28dp"
        android:layout_marginStart="13dp"
        android:layout_marginTop="18dp"
        android:text="@string/show_left_name"
        app:layout_constraintEnd_toStartOf="@+id/ShowRightName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TextView" />

    <TextView
        android:id="@+id/TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="18dp"
        android:layout_marginTop="28dp"
        android:text="@string/how_to_navigate_a_ship"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/ShowRightName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints"
        tools:text="How to navigate a ship" />

    <Button
        android:id="@+id/ShowRightName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="72dp"
        android:text="@string/show_right_name"
        app:layout_constraintBottom_toTopOf="@+id/Whichside"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/ShowLeftName"
        app:layout_constraintTop_toBottomOf="@+id/TextView" />

    <Button
        android:id="@+id/Meansleft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="17dp"
        android:layout_marginStart="1dp"
        android:text="@string/means_left"
        app:layout_constraintBottom_toBottomOf="@+id/Meansright"
        app:layout_constraintEnd_toStartOf="@+id/Meansright"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/Meansright" />

    <Button
        android:id="@+id/Meansright"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="56dp"
        android:text="@string/means_right"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/Meansleft"
        app:layout_constraintTop_toBottomOf="@+id/Port" />

    <TextView
        android:id="@+id/Whichside"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:layout_marginStart="34dp"
        android:text="@string/which_side_of_the_ship_is_the_following"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/Port"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ShowRightName" />

    <TextView
        android:id="@+id/Port"
        android:layout_width="71dp"
        android:layout_height="0dp"
        android:layout_marginBottom="139dp"
        android:layout_marginStart="134dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/Meansright"
        app:layout_constraintStart_toStartOf="@+id/ShowLeftName"
        app:layout_constraintTop_toBottomOf="@+id/Whichside" />

</android.support.constraint.ConstraintLayout>
